# plexus-comms

./: .gitignore  Cargo.toml  DISCORD_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  README.md  config.example.toml  register_discord.js
src/: builder.rs  config.rs  lib.rs  main.rs
src/activations/: mod.rs
src/activations/discord/: activation.rs  discord_client.rs  discord_gateway.rs  mod.rs  storage.rs  types.rs
src/activations/email/: activation.rs  imap.rs  mod.rs  smtp.rs  storage.rs  types.rs
src/activations/push/: activation.rs  mod.rs  providers.rs  types.rs
src/activations/slack/: activation.rs  mod.rs  types.rs
src/activations/sms/: activation.rs  mod.rs  providers.rs  types.rs
src/activations/telegram/: activation.rs  mod.rs  types.rs
src/activations/whatsapp/: activation.rs  mod.rs  types.rs
